[package]
name = "grpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jammdb = "0.6.0"
bincode = "1.3.3"
serde = { version = "1.0.152", features = ["derive"] }
text_io = "0.1.12"
tar = "0.4.38"
flate2 = "1.0"
octocrab = "0.18.1"
attohttpc = { version = "0.24.0", features = ["json"] }
clap = { version = "4.0.32", features = ["cargo"] }
prettytable = "0.10.0"
tempfile = "3.3.0"
shellexpand = "3.0.0"
infer = "0.12.0"
bzip2 = "0.4.4"
toml = "0.5.10"

